samples/_failures_safe/1761469305_e51b7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c77b556.c: In function ‘main’:
./samples/SAFE/__tmp_5c77b556.c:188:38: error: missing terminating " character
  188 |     output_file[strcspn(output_file, "\
      |                                      ^~
./samples/SAFE/__tmp_5c77b556.c:188:5: error: expected expression at end of input
  188 |     output_file[strcspn(output_file, "\
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_5c77b556.c:188:5: error: expected declaration or statement at end of input
